--- a/ui_design/islem_gecmisi.ui
+++ b/ui_design/islem_gecmisi.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow_bot</class>
- <widget class="QMainWindow" name="MainWindow_bot">
+ <class>MainWindow_islemGecmisi</class>
+ <widget class="QMainWindow" name="MainWindow_islemGecmisi">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1223</width>
-    <height>697</height>
+    <width>748</width>
+    <height>416</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -22,7 +22,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>kucoin trade</string>
+   <string>İşlem Geçmişi</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -548,10 +548,10 @@ QTimeEdit, QToolBox, QToolBox::tab, QToolBox::tab:selected {
      <number>3</number>
     </property>
     <item row="0" column="0">
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="QTableWidget" name="tableWidget_islemGecmisi">
       <property name="font">
        <font>
-        <pointsize>7</pointsize>
+        <pointsize>8</pointsize>
        </font>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
@@ -560,57 +560,34 @@ QTimeEdit, QToolBox, QToolBox::tab, QToolBox::tab:selected {
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
-      <attribute name="verticalHeaderVisible">
-       <bool>false</bool>
-      </attribute>
       <column>
        <property name="text">
-        <string>Hacim(USDT)</string>
+        <string>Time Stamp</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Bakiye (BTC/USDT)</string>
+        <string>İşlem Tipi</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Token Adı</string>
+        <string>Token Çifti</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Güncel Fiyat</string>
+        <string>Emir Fiyatı</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Ortalama Maliyet</string>
+        <string>Adet</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Artış Limiti %</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Düşüş Limiti %</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Stoploss</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Stoploss Limiti %</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Kaydet/Güncelle</string>
+        <string>Toplam</string>
        </property>
       </column>
      </widget>
@@ -623,31 +600,6 @@ QTimeEdit, QToolBox, QToolBox::tab, QToolBox::tab:selected {
 font: 10pt &quot;MS Shell Dlg 2&quot;;
 color: rgb(0, 0, 0);</string>
    </property>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1223</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuDaha_Fazla">
-    <property name="title">
-     <string>Daha Fazla</string>
-    </property>
-    <widget class="QMenu" name="menuBana_Ula">
-     <property name="title">
-      <string>Bana Ulaş</string>
-     </property>
-     <addaction name="actionS_bhan_Akbenli_2"/>
-     <addaction name="separator"/>
-     <addaction name="action05522612829"/>
-    </widget>
-    <addaction name="menuBana_Ula"/>
-   </widget>
-   <addaction name="menuDaha_Fazla"/>
   </widget>
   <action name="actionFirma_Ekle">
    <property name="text">
@@ -675,16 +627,6 @@ color: rgb(0, 0, 0);</string>
   <action name="action_islemGecmisi">
    <property name="text">
     <string>İşlem Geçmişi</string>
-   </property>
-  </action>
-  <action name="actionS_bhan_Akbenli_2">
-   <property name="text">
-    <string>Sübhan Akbenli</string>
-   </property>
-  </action>
-  <action name="action05522612829">
-   <property name="text">
-    <string>05522612829</string>
    </property>
   </action>
  </widget>
